# review_helper

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Changes.md  Dockerfile  LICENSE  NOTES.md  README.md  build.rs  rustfmt.toml
.github/workflows/: ci.yml  deploy.yml  release.yml  rust.yml
.woodpecker/: build.yml
assets/icons/: review_helper.icns
assets/linux_desktop/: review-helper.desktop
docs/: example_review.ini  example_review.toml  foo.md  notes.md  notes.txt  restructure_notes.txt  ui_requirements.md  ui_requirements.ods
docs/v4_refactoring/: file_diff_note_mapping.md  file_structure.md  storage_refactoring.rs  stories.md  tabview.slint
docs/woodpecker/: Dockerfile.ci  Multipipeline.md  README.md  build.yml
src/: app_config.rs  app_config_controller.rs  app_state.rs  command_utils.rs  commit_picker_controller.rs  commit_proxy_model.rs  config.rs  file_diff_proxy_models.rs  files_proxy_model.rs  git_command_spawner.rs  git_diff_formatter.rs  git_repo.rs  git_utils.rs  id_model.rs  lib.rs  log_utils.rs  main.rs  notes.rs  notes_controller.rs  notes_proxy_models.rs  project.rs  project_controller.rs  repositories.rs  repositories_controller.rs  repository.rs  repository_controller.rs  review_helper.rs  review_helper_cache.rs  review_helper_config.rs  review_helper_config_controller.rs  review_helper_controller.rs  review_helper_settings.rs  review_helper_settings_controller.rs  utils_controller.rs  worker.rs
src/controller/: commit_picker_controller.rs  file_diffs_controller.rs  file_picker_controller.rs  mod.rs  repository_controller.rs  review_controller.rs  review_helper_controller.rs  review_helper_settings_controller.rs  utils_controller.rs
src/model/: app_state.rs  commit_proxy_model.rs  commit_proxy_models.rs  file_diff_proxy_models.rs  files_proxy_model.rs  id_model.rs  mod.rs  model_utils.rs  (+5 more)
ui/: app_config_popup.slint  app_settings_popup.slint  appwindow.slint  commit_editor.slint  commit_picker.slint  diff_config_view.slint  error_popup.slint  file_diff_setup_view.slint  file_diff_view.slint  file_diff_widget.slint  file_note_delegate.slint  file_notes_popup.slint  file_picker.slint  globals.slint  image_button.slint  menu.slint  notes_view.slint  overall_statistics.slint  popup.slint  repository_settings_popup.slint  repository_settings_tab.slint  repository_settings_view.slint  respository_tab_view_item.slint  respository_view.slint  review_selection_tab.slint  review_view.slint  string_utils.slint  style.slint  sub_section_text.slint  tabview.slint  tool_button.slint
(+19 files in other folders)
