[package]
name = "review-todo"
version = "0.1.0"
authors = ["Christian von Wascinski <harryherold@googlemail.com>"]
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml = "0.8.19"
serde = "1.0.215"
serde_derive = "1.0.215"
slint = { version = "1.10.0", default-features = false, features = [
    "std",
    "backend-winit",
    "compat-1-2",
    "renderer-femtovg",
    "renderer-software",
    "backend-qt",
] }
native-dialog = "0.7.0"
todo-txt = "3.1.0" # TODO remove
anyhow = "1.0.89"
dirs = "6.0.0"

[build-dependencies]
slint-build = "1.10.0"
